# notes

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
notes/: cli.py  config.py
tests/: __init__.py  test_cli.py
