[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notes"
version = "0.0.1"
description = 'Manage markdown notes'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["writing"]
authors = [{ name = "Tugrul Ates", email = "me@tugrulates.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
  "Topic :: Text Processing :: Markup :: Markdown",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "Jinja2==3.1.3",
  "markdown-it-py[plugins]==3.0.0",
  "pydantic==2.6.4",
  "PyYAML==6.0.1",
  "rich==13.7.1",
  "typer[all]==0.10.0",
]

[project.optional-dependencies]
dev = [
  "bandit[toml]==1.7.8",
  "black==24.3.0",
  "flake8-bugbear==24.2.6",
  "flake8-builtins==2.2.0",
  "flake8-comprehensions==3.14.0",
  "flake8-docstrings==1.7.0",
  "flake8-encodings[classes]==0.5.1",
  "flake8-return==1.2.0",
  "flake8-simplify==0.21.0",
  "flake8==7.0.0",
  "isort==5.13.2",
  "mypy==1.9.0",
  "pep8-naming==0.13.3",
  "pytest==8.1.1",
  "types-PyYAML==6.0.12.20240311",
]
test = [
  "pytest-cov==5.0.0",
  "pytest==8.1.1",
]

[project.scripts]
notes = "notes.cli:app"

[project.urls]
Documentation = "https://github.com/tugrulates/notes#readme"
Issues = "https://github.com/tugrulates/notes/issues"
Source = "https://github.com/tugrulates/notes"

[tool.hatch.build]
artifacts = [
  "notes/templates/**",
]

[tool.hatch.envs.dev]
features = ["dev"]

[tool.hatch.envs.test]
features = ["test"]

[tool.hatch.envs.default.scripts]
lint = [
  "flake8 .",
  "mypy . --check-untyped-defs",
  "bandit -qr -c pyproject.toml .",
  "black . --check --diff",
  "isort . --check-only --diff",
]
fmt = [
  "isort .",
  "black .",
]
test = [
  "pytest -v",
]
cov = [
  "pytest -v --cov notes --cov-report xml --cov-fail-under=80",
]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
